--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,38 @@
 </head>
 <body>
 
-<%= yield %>
+  <nav class="navbar navbar-default">
+
+      <div class="collapse navbar-collapse" id="main-navbar">
+        <ul class="nav navbar-nav navbar-left">
+          <% if user_signed_in? %>
+          <li><%= link_to "#{current_user.full_name}", user_path(current_user)%></li>
+          <li><%= link_to "SIGN OUT", sessions_path, method: :delete %></li>
+          <% else %>
+          <li><%= link_to "NEW USER", new_user_path %></li>
+          <li><%= link_to "Log In", new_session_path %></li>
+          <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<embed class="music" src="audio/Divorce_Papers_-_Arcade_Fire_Her_Soundtrack.mp3" autostart="true" loop="true" hidden="true">
+
+  <% if notice %>
+  <div class="alert fade in alert-success">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <h4><%= notice %></h4>
+  </div>
+
+  <% elsif alert %>
+  <div class="alert fade in alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <h4><%= alert %></h4>
+  </div>
+  <% end %>
+
+  <%= yield %>
 
 </body>
 </html>
