--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,15 @@
 <body>
 
   <nav class="navbar navbar-default">
-
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="nav navbar-nav navbar-left">
           <% if user_signed_in? %>
@@ -19,27 +27,27 @@
           <li><%= link_to "NEW USER", new_user_path %></li>
           <li><%= link_to "Log In", new_session_path %></li>
           <% end %>
-      </ul>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<embed class="music" src="audio/Divorce_Papers_-_Arcade_Fire_Her_Soundtrack.mp3" autostart="true" loop="true" hidden="true">
+  <embed class="music" src="audio/Divorce_Papers_-_Arcade_Fire_Her_Soundtrack.mp3" autostart="true" loop="true" hidden="true">
 
-  <% if notice %>
-  <div class="alert fade in alert-success">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <h4><%= notice %></h4>
-  </div>
+    <% if notice %>
+    <div class="alert fade in alert-success">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <h4><%= notice %></h4>
+    </div>
 
-  <% elsif alert %>
-  <div class="alert fade in alert-danger">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <h4><%= alert %></h4>
-  </div>
-  <% end %>
+    <% elsif alert %>
+    <div class="alert fade in alert-danger">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <h4><%= alert %></h4>
+    </div>
+    <% end %>
 
-  <%= yield %>
+    <%= yield %>
 
-</body>
-</html>
+  </body>
+  </html>
