--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
       </div>
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="nav navbar-nav navbar-left">
+          <li><%= link_to "HOME", root_path %></li>
           <% if user_signed_in? %>
           <li><%= link_to "#{current_user.full_name}", user_path(current_user)%></li>
           <li><%= link_to "SIGN OUT", sessions_path, method: :delete %></li>
