this commit adds an approved field to user model, slightly modifies user's view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,9 @@
     <div class="panel-heading">Profile</div>
       <div class="panel-body">
         <p>Email: <br> <%= @user.email %></p>
+        <p>Summary: <br> <%= @user.summary %></p>
+        <p>Description: <br> <%= @user.description %></p>
+        <p>Available? <br> <%= @user.is_available %></p>
       </div>
     </div>
 
