--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,11 @@
         <ul class="nav navbar-nav navbar-left">
           <li><%= link_to "HOME", root_path %></li>
           <% if user_signed_in? %>
-          <li><%= link_to "#{current_user.full_name}", user_path(current_user)%></li>
+          <li><%= link_to "#{current_user.full_name}'s Profile", user_path(current_user)%></li>
           <li><%= link_to "SIGN OUT", sessions_path, method: :delete %></li>
           <% else %>
           <li><%= link_to "NEW USER", new_user_path %></li>
-          <li><%= link_to "Log In", new_session_path %></li>
+          <li><%= link_to "LOG IN", new_session_path %></li>
           <% end %>
         </ul>
       </div>
