--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,12 @@
   <% @users.each do |u| %>
   <div class='well'>
     <%= link_to u.full_name, u %>
-
   </div>
   <% end %>
+
+  <div class="digg_pagination">
+    <div class="page_info">
+      <%= page_entries_info @users %>
+    </div>
+    <%= will_paginate @users, :container => false %>
+  </div>
