fixing the index page to only show approved users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,21 +2,24 @@
   <h3><%= @user.full_name %></h3>
 
   <div class="panel panel-info">
-    <div class="panel-heading">Profile</div>
-    <div class="panel-body">
-      <p><strong>Email</strong> <br> <%= @user.email %></p>
-      <p><strong>Summary</strong> <br> <%= @user.summary %></p>
-      <p><strong>Description</strong> <br> <%= markdown(@user.description) %></p>
-      <p><strong>Availability</strong> <br>
-        <% if @user.is_available%>
-        Available for recruiting
-        <% else %>
-        Not available for recruiting
-        <% end %>
-      </p>
+    <div class="panel-heading">
+      <% if @user.approved %> Active
+      <% else %> Pending.. You will be notified when your account is approved
+      <%end  %></div>
+      <div class="panel-body">
+        <p><strong>Email</strong> <br> <%= @user.email %></p>
+        <p><strong>Summary</strong> <br> <%= @user.summary %></p>
+        <p><strong>Description</strong> <br> <%= markdown(@user.description) %></p>
+        <p><strong>Availability</strong> <br>
+          <% if @user.is_available%>
+          Available for recruiting
+          <% else %>
+          Not available for recruiting
+          <% end %>
+        </p>
+      </div>
     </div>
-  </div>
 
-  <% if can? :manage, @user %>
-  <%= link_to "Edit Profile", edit_user_path(@user), class: "btn btn-info"  %>
-  <% end %>
+    <% if can? :manage, @user %>
+    <%= link_to "Edit Profile", edit_user_path(@user), class: "btn btn-info"  %>
+    <% end %>
