--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,46 @@
 <div class="container">
 
-  <h1 class="title">Edit User Profile</h1>
-  <%= render "form" %>
+  <h1>Edit User Profile</h1>
 
-  <div>
-    <%= link_to "Change password", user_password_path(@user)%>
+  <% if @user.errors.full_messages.size > 0 %>
+  <div class="notice">
+    <%= @user.errors.full_messages.join(",") %>
   </div>
+  <% end %>
+  <div>
+    <%= form_for @user do |f|%>
+    <div class="form-group">
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name, class:"form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name, class:"form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.email_field :email, class:"form-control" %>
+    </div>
 
-</div>
+    <div class="form-group">
+      <%= f.label :summary %>
+      <%= f.text_area :summary, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :description %>
+      <%= f.text_area :description, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label "Available for recruiting?" %>
+      <%= f.check_box :is_available %>
+    </div>
+
+    <div class="form-group">
+      <%= f.submit class:"btn btn-info btn-sm" %>
+      <%= link_to "Change password", user_password_path(@user), class:"btn btn-danger btn-sm"%>
+      <%= link_to "Cancel", user_path(@user), class:"btn btn-default btn-sm"%>
+    </div>
+    <% end %>
+  </div>
