--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
 
-  <h1>All Users</h1>
+  <% page_header "All Users" %>
 
   <% @users.each do |u| %>
   <div class='well'>
