--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <h3><%= @user.full_name %></h3>
+
+  <% page_header @user.full_name %>
 
   <div class="panel panel-info">
     <div class="panel-heading">
