--- a/app/views/skills/_form.html.erb
+++ b/app/views/skills/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @skill do |f| %>
+<%= simple_form_for @skill, remote: true do |f| %>
 
 <div class="form-group">
   <%= f.input :title %>
