adding authenticate user check before render edit and edit password

--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -1,11 +1,12 @@
 <div class="container">
+  <% if can? :manage, @user %>
   <h1>Change password</h1>
 
-<% if @user.errors.full_messages.size > 0 %>
+  <% if @user.errors.full_messages.size > 0 %>
   <div class="alert">
     <%= @user.errors.full_messages.join(",") %>
   </div>
-<% end %>
+  <% end %>
   <div>
     <%= form_for @user, url: user_password_path(@user), method: :patch do |f| %>
     <div class="form-group">
@@ -30,5 +31,5 @@
     <% end %>
 
   </div>
-
+  <% end %>
 </div>
