--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,8 @@
   <%= f.input :description %>
 </div>
 <div class="form-group">
-  <%= f.input :is_available, label:'available?',  as: :check_boxes %>
+  <%= f.label "Available for recruiting?" %>
+  <%= f.check_box :is_available %>
 </div>
 <%= f.submit class: "btn btn-primary btn-sm" %>
 <% end %>
