Added migration for new columns, changed user params, validations, added social media to new, edit, show and brand logo

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,10 @@
 
 @import 'chosen';
 @import "font-awesome";
+
+.navbar .brand {
+  display: inline-block;
+      max-width: 27%;
+      height: auto;
+      padding-left: 100px;
+}
