--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,6 +23,12 @@
   <%= f.input :description %>
 </div>
 <div class="form-group">
+  <%= f.label 'Social Media' %>
+  <%= f.input :linkedin, as: url %>
+  <%= f.input :github, as: url %>
+  <%= f.input :twitter, as: url %>
+</div>
+<div class="form-group">
   <%= f.input :is_available, label:'available?',  as: :check_boxes %>
 </div>
 <%= f.submit class: "btn btn-primary btn-sm" %>
