--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -1,13 +1,37 @@
+
 <div class="container">
+
+  
   <%= form_tag user_contact_send_path do %>
-    <div>
-      <%= label_tag :email %>
-      <%= email_field_tag :email %>
+
+    <div class="row">
+      <div class="col-xs-6 col-md-4 col-lg-offset-1">
+        <fieldset class="form-group">
+          <%= label_tag :email, "Contact Email" %>
+          <%= email_field_tag :email, nil, class: "form-control", placeholder: "example@email.com" %>
+        </fieldset>
+      </div>
     </div>
-    <div>
-      <%= label_tag :body %>
-      <%= text_area_tag :body %>
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+        <fieldset class="form-group">
+          <%= label_tag :body, "Message" %>
+          <%= text_area_tag :body, nil, class: "form-control", placeholder: "Send an email to let this person know you are interested!" %>
+        </fieldset>
+      </div>
     </div>
-    <%= submit_tag "Email" %>
+    <div class="row">
+      <div class="col-lg-2 col-lg-offset-1">
+        <%= button_tag(type: "submit", class: "btn btn-default") do %>
+          <i class="fa fa-send"></i>  Email <%= @user.first_name %>
+        <% end %>
+      </div>
+    </div>
+
   <% end %>
+
+  
 </div>
+
+
+
