--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -6,16 +6,17 @@
     </div>
     <div class="panel-body">
       <div class="skills">
-        <% @user.skills.each do |ans| %>
+        <% @user.skills.each do |s| %>
           <%# becareful of the folder %>
-          <%= render '/skills/skill', skill: ans %>
+          <%= render '/skills/skill', skill: s %>
         <% end %>
       </div>
-      <% if can? :manage, @user %>
+      <%# if can? :manage, @user %>
         <div id="skill-form">
+          <%# byebug %>
           <%= render 'skills/form' %>
         </div>
-      <% end %>
+      <%# end %>
 
 
     </div>
