--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -33,5 +33,8 @@
   <%= f.label "Available for recruiting?" %>
   <%= f.check_box :is_available %>
 </div>
+<div class="form-group">
+  <%= f.input :image %>
+</div>
 <%= f.submit class: "btn btn-primary btn-sm" %>
 <% end %>
