--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -47,6 +47,10 @@
       <%= f.label "Available for recruiting?" %>
       <%= f.check_box :is_available %>
     </div>
+    <div class="form-group">
+      <%= f.lable "Image" %>
+      <%= f.file_field :image %>
+    </div>
 
     <div class="form-group">
       <%= f.submit class:"btn btn-info btn-sm" %>
