--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,11 +23,10 @@
   <%= f.input :description %>
 </div>
 <div class="form-group">
-
   <%= f.label 'Social Media' %>
-  <%= f.input :linkedin, as: url %>
-  <%= f.input :github, as: url %>
-  <%= f.input :twitter, as: url %>
+  <%= f.input :linkedin, as: :url %>
+  <%= f.input :github, as: :url %>
+  <%= f.input :twitter, as: :url %>
 </div>
 <div class="form-group">
   <%= f.label "Available for recruiting?" %>
