--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -6,9 +6,9 @@
     </div>
     <div class="panel-body">
       <div class="skills">
-        <% @user.skills.each do |s| %>
+        <% @user.skills.each do |skill| %>
           <%# becareful of the folder %>
-          <%= render '/skills/skill', skill: s %>
+          <%= render '/skills/skill', skill: skill %>
         <% end %>
       </div>
       <%# if can? :manage, @user %>
@@ -17,8 +17,25 @@
           <%= render 'skills/form' %>
         </div>
       <%# end %>
-
-
+    </div>
+  </div>
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <h4>Educations</h4>
+    </div>
+    <div class="panel-body">
+      <div class="educations">
+        <% @user.educations.each do |education| %>
+          <%# becareful of the folder %>
+          <%= render '/educations/education', education: education %>
+        <% end %>
+      </div>
+      <%# if can? :manage, @user %>
+        <div id="education-form">
+          <%# byebug %>
+          <%= render 'educations/form' %>
+        </div>
+      <%# end %>
     </div>
   </div>
 </div>
