added resume and image files

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -48,8 +48,12 @@
       <%= f.check_box :is_available %>
     </div>
     <div class="form-group">
-      <%= f.lable "Image" %>
+      <%= f.label "Image" %>
       <%= f.file_field :image %>
+    </div>
+    <div class="form-group">
+      <%= f.label "Attachment" %>
+      <%= f.file_field :attachment %>
     </div>
 
     <div class="form-group">
