--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
         <% if can? :manage, @user %>
           <%= link_to "Edit Account", edit_user_path(@user), class: "btn btn-info"  %>
         <% end %>
+        <p><strong>Picture</strong><br><%=image_tag @user.image.url(:thumb) %></p>
         <p><strong>Email</strong> <br> <%= @user.email %></p>
         <p><strong>Summary</strong> <br> <%= @user.summary %></p>
         <p><strong>Description</strong> <br> <%= markdown(@user.description) %></p>
