--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -35,5 +35,8 @@
 <div class="form-group">
   <%= f.input :image %>
 </div>
+<div class="form-group">
+  <%= f.input :attachment %>
+</div>
 <%= f.submit class: "btn btn-primary btn-sm" %>
 <% end %>
