Made brand a link to root path , adjusted navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,9 +17,9 @@
 @import 'chosen';
 @import "font-awesome";
 
-.navbar .brand {
-  display: inline-block;
-      max-width: 27%;
-      height: auto;
-      padding-left: 100px;
+.navbar-brand {
+  height: auto;
+  width: auto;
+  max-width: 300px;
+  max-height: 300px;
 }
