--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,44 +1,50 @@
 <div class="container">
   <%# Stop Unapproved user from being viewed. %>
   <% if can? :view, @user %>
-    <% page_header @user.full_name %>
+  <% page_header @user.full_name %>
 
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <% if @user.approved %> Active
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <% if @user.approved %> Active
+      <% else %>
+      Pending.. You will be notified when your account is approved
+      <%end  %>
+    </div>
+    <div class="panel-body">
+      <%= link_to "Email student", user_contact_path(@user), class: "btn btn-info"  %>
+      <% if can? :manage, @user %>
+      <%= link_to "Edit Account", edit_user_path(@user), class: "btn btn-info"  %>
+      <% end %>
+      <p><strong>Picture</strong><br><%=image_tag @user.image.url(:thumb) %></p>
+      <p><strong>Resume</strong><br>
+        <% if @user.attachment.url %>
+        <%=link_to 'Download resume', @user.attachment.url %>
         <% else %>
-          Pending.. You will be notified when your account is approved
-        <%end  %>
-      </div>
-      <div class="panel-body">
-        <%= link_to "Email student", user_contact_path(@user), class: "btn btn-info"  %>
-        <% if can? :manage, @user %>
-          <%= link_to "Edit Account", edit_user_path(@user), class: "btn btn-info"  %>
+        <span>N/A</span>
         <% end %>
-        <p><strong>Picture</strong><br><%=image_tag @user.image.url(:thumb) %></p>
-        <p><strong>Attachment</strong><br><%=link_to 'Download file', @user.attachment.url %></p>
-        <p><strong>Email</strong> <br> <%= @user.email %></p>
-        <p><strong>Summary</strong> <br> <%= @user.summary %></p>
-        <p><strong>Description</strong> <br> <%= markdown(@user.description) %></p>
+      </p>
+      <p><strong>Email</strong> <br> <%= @user.email %></p>
+      <p><strong>Summary</strong> <br> <%= @user.summary %></p>
+      <p><strong>Description</strong> <br> <%= markdown(@user.description) %></p>
 
-        <div class="">
-          <p><strong>Social Media</strong><p>
+      <div class="">
+        <p><strong>Social Media</strong><p>
           <% unless @user.linkedin == nil %>
-            <%= link_to @user.linkedin do %>
-              <i class="fa fa-linkedin-square fa-3x"></i>
-            <% end %>
+          <%= link_to @user.linkedin do %>
+          <i class="fa fa-linkedin-square fa-3x"></i>
+          <% end %>
           <% end %>
 
           <% unless @user.github == nil %>
-            <%= link_to @user.github do %>
-              <i class="fa fa-github-square fa-3x"></i>
-            <% end %>
+          <%= link_to @user.github do %>
+          <i class="fa fa-github-square fa-3x"></i>
+          <% end %>
           <% end %>
 
           <% unless @user.twitter == nil %>
-            <%= link_to @user.twitter do %>
-              <i class="fa fa-twitter-square fa-3x"></i>
-            <% end %>
+          <%= link_to @user.twitter do %>
+          <i class="fa fa-twitter-square fa-3x"></i>
+          <% end %>
           <% end %>
         </div>
 
@@ -51,7 +57,7 @@
         </p>
       </div>
     </div>
-  <%= render "profile" %>
-  <% end %>
+    <%= render "profile" %>
+    <% end %>
 
-</div>
+  </div>
