add  require font-awesome to application.css to resolve push issue on heroku

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,11 +11,10 @@
  * file per style scope.
  *
  *= require chosen
+ *= require font-awesome
  *= require_tree .
  *= require_self
  */
-
-@import "font-awesome";
 
 .navbar-brand {
   height: auto;
