--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
-<div class="container">
+<div class="container profile-container">
   <%# Stop Unapproved user from being viewed. %>
   <% if can? :view, @user %>
-    <% page_header @user.full_name %>
+
+    <%= link_to "Email student", user_contact_path(@user), class: "btn btn-info"  %>
+    <% if can? :manage, @user %>
+      <%= link_to "Edit Account", edit_user_path(@user), class: "btn btn-info"  %>
+    <% end %> 
 
     <div class="panel panel-info">
       <div class="panel-heading">
@@ -10,46 +14,52 @@
           Pending.. You will be notified when your account is approved
         <%end  %>
       </div>
+
       <div class="panel-body">
-        <%= link_to "Email student", user_contact_path(@user), class: "btn btn-info"  %>
-        <% if can? :manage, @user %>
-          <%= link_to "Edit Account", edit_user_path(@user), class: "btn btn-info"  %>
-        <% end %>
-        <p><strong>Picture</strong><br><%=image_tag @user.image.url(:thumb) %></p>
-        <p><strong>Attachment</strong><br><%=link_to 'Download file', @user.attachment.url %></p>
-        <p><strong>Email</strong> <br> <%= @user.email %></p>
-        <p><strong>Summary</strong> <br> <%= @user.summary %></p>
-        <p><strong>Description</strong> <br> <%= markdown(@user.description) %></p>
-
-        <div class="">
-          <p><strong>Social Media</strong><p>
-          <% unless @user.linkedin == nil %>
-            <%= link_to @user.linkedin do %>
-              <i class="fa fa-linkedin-square fa-3x"></i>
-            <% end %>
-          <% end %>
-
-          <% unless @user.github == nil %>
-            <%= link_to @user.github do %>
-              <i class="fa fa-github-square fa-3x"></i>
-            <% end %>
-          <% end %>
-
-          <% unless @user.twitter == nil %>
-            <%= link_to @user.twitter do %>
-              <i class="fa fa-twitter-square fa-3x"></i>
-            <% end %>
-          <% end %>
+        <div class="row">
+          <section class="col-lg-3">
+            <%=image_tag @user.image.url(:medium), class: "user-dp center-block img-rounded" %>
+            <div class="row seo-icons center-block">
+              <%# LinkedIn Icon %>
+              <% unless @user.linkedin == nil %>
+                <%= link_to @user.linkedin do %>
+                  <i class="col-xs-4 text-center fa fa-linkedin-square fa-3x"></i>
+                <% end %>
+              <% end %>
+              <%# Github Icon %>
+              <% unless @user.github == nil %>
+                <%= link_to @user.github do %>
+                  <i class="col-xs-4 text-center fa fa-github-square fa-3x"></i>
+                <% end %>
+              <% end %>
+              <%# Twitter Icon %>
+              <% unless @user.twitter == nil %>
+                <%= link_to @user.twitter do %>
+                  <i class="col-xs-4 text-center fa fa-twitter-square fa-3x"></i>
+                <% end %>
+              <% end %>
+            </div>
+            <div class="available-box text-center">
+              <% if @user.is_available%>
+                <i class="fa fa-thumbs-up"></i>
+                <p>Available</p>
+              <% else %>
+                <i class="fa fa-thumbs-down"></i>
+                <p>Not available</p>
+              <% end %>
+            </div>
+          </section>
+          <section class="col-lg-9 summary-container">
+            <h1 class="profile-name-header"><%= @user.full_name %></h1>
+            <p><i class="fa fa-envelope"></i>&nbsp; <%= @user.email %></p>
+            <p><i class="fa fa-file"></i>&nbsp; <%=link_to 'Resume', @user.attachment.url %></p>
+            <p><em><%= @user.summary %></em></p>
+            <p>
+              <%= markdown(@user.description) %>
+            </p>
+          </section>
         </div>
-
-        <p><strong>Availability</strong> <br>
-          <% if @user.is_available%>
-          Available for recruiting
-          <% else %>
-          Not available for recruiting
-          <% end %>
-        </p>
-      </div>
+      </div> <!-- /panel-body-->
     </div>
   <%= render "profile" %>
   <% end %>
