--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -21,7 +21,26 @@
 
     </div>
   </div>
+
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <h4>Employment</h4>
+    </div>
+    <div class="panel-body">
+      <div class="employments">
+        <% @user.employments.each do |employ| %>
+          <%# be careful of the folder %>
+          <%= render '/employments/employment', employment: employ %>
+        <% end %>
+      </div>
+      <%# if can? :manage, @user %>
+        <div id="employment-form">
+          <%# byebug %>
+          <%= render 'employments/form' %>
+        </div>
+      <%# end %>
+
+
+    </div>
+  </div>
 </div>
-
-
-
