--- a/app/views/educations/_form.html.erb
+++ b/app/views/educations/_form.html.erb
@@ -10,7 +10,7 @@
   <%= f.input :grade_year %>
 </div>
 <div class="form-group">
-  <%= f.input :level %>
+  <%= f.input :level, as: :select, collection: Education::VALID_EDUCATION_LEVELS %>
 </div>
 <div class="form-group">
   <%= f.input :field %>
