--- a/app/views/education/_form.html.erb
+++ b/app/views/education/_form.html.erb
@@ -7,7 +7,7 @@
   <%= f.input :school_link %>
 </div>
 <div class="form-group">
-  <%= f.input :grade_year %>
+  <%= f.input :grade_year, order: [:month, :year], discard_hour: true, start_year: 1980, end_year: Date.today.year %>
 </div>
 <div class="form-group">
   <%= f.input :level %>
