--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -11,12 +11,12 @@
           <%= render '/skills/skill', skill: skill %>
         <% end %>
       </div>
-      <%# if can? :manage, @user %>
+      <% if can? :manage, @user %>
         <div id="skill-form">
           <%# byebug %>
           <%= render 'skills/form' %>
         </div>
-      <%# end %>
+      <% end %>
     </div>
   </div>
   <div class="panel panel-info">
@@ -30,12 +30,12 @@
           <%= render '/educations/education', education: education %>
         <% end %>
       </div>
-      <%# if can? :manage, @user %>
+      <% if can? :manage, @user %>
         <div id="education-form">
           <%# byebug %>
           <%= render 'educations/form' %>
         </div>
-      <%# end %>
+      <% end %>
     </div>
   </div>
 
@@ -50,12 +50,12 @@
           <%= render '/employments/employment', employment: employ %>
         <% end %>
       </div>
-      <%# if can? :manage, @user %>
+      <% if can? :manage, @user %>
         <div id="employment-form">
           <%# byebug %>
           <%= render 'employments/form' %>
         </div>
-      <%# end %>
+      <% end %>
 
 
     </div>
