--- a/app/assets/stylesheets/skills.scss
+++ b/app/assets/stylesheets/skills.scss
@@ -3,7 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .skills div {
   padding: 2px 0;
+  text-align: center;
 }
+
 #skill-form div{
   display: inline-block;
 }
