--- a/app/assets/stylesheets/educations.scss
+++ b/app/assets/stylesheets/educations.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the educations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.educations div {
+  padding: 2px 0;
+}
+
+.educations .grey {
+  color: grey;
+}
+
+#education-form div{
+  display: inline-block;
+}
