Add autocomplete functionality on company name field and refactor company model to be part of the employment model

--- a/app/views/employments/_employment.html.erb
+++ b/app/views/employments/_employment.html.erb
@@ -1,7 +1,11 @@
 <div id="<%= dom_id(employment) %>">
-  <%= employment.title %>
-  <%= employment.rating %>
-  <%= employment.category.name %>
+  <%= employment.job_title %> <br>
+  <%= employment.location %> <br>
+  <%= formatted_date_time(employment.start_year) %> -
+  <%= formatted_date_time(employment.end_year) %> <br>
+  <%= employment.summary %> <br>
+  <%= employment.company_name %> <br>
+  <%= employment.company_link %> <br>
   <% if can? :destroy, employment %>
   <%= link_to "Delete", employment_path(employment),
                         method: :delete,
