--- a/app/views/company/_form.html.erb
+++ b/app/views/company/_form.html.erb
@@ -1,15 +1,12 @@
-<%= simple_form_for @skill, remote: true do |f| %>
+<%= simple_form_for @company, remote: true do |f| %>
 
 <div class="form-group">
-  <%= f.input :title %>
+  <%= f.input :name %>
 </div>
 <div class="form-group">
-  <%= f.input :rating %>
+  <%= f.input :link %>
 </div>
 <div class="form-group">
-  <%= f.association :category, as: :select, selected: 1 %>
-</div>
-<div class="form-group">
-  <%= f.submit "Add New Skill", class: "btn btn-primary btn-sm" %>
+  <%= f.submit "Add Company", class: "btn btn-primary btn-sm" %>
 </div>
 <% end %>
