--- a/app/views/employments/_form.html.erb
+++ b/app/views/employments/_form.html.erb
@@ -27,9 +27,18 @@
     <%= f.input :summary %>
   </div>
   <div class="form-group">
-    <%= f.association :company %>
+    <%= f.input :company_name, :url => autocomplete_employment_company_name_employments_path, :as => :autocomplete %>
   </div>
   <div class="form-group">
-    <%= f.submit "Add New Skill", class: "btn btn-primary btn-sm" %>
+    <%= f.input :company_link %>
+  </div>
+
+      <%#= f.input :name, :url => autocomplete_company_name_employments_path, :as => :autocomplete %>
+      <%#= f.association :company, collection: Company.order(:name), prompt: "Choose a Company" %>
+
+
+
+  <div class="form-group">
+    <%= f.submit "Add Employment History", class: "btn btn-primary btn-sm" %>
   </div>
 <% end %>
