--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,11 @@
       <div class="panel-body">
         <div class="row">
           <section class="col-lg-3">
-            <%=image_tag @user.image.url(:medium), class: "user-dp center-block img-rounded" %>
+            <% if @user.image.url(:medium).nil? %>
+              <%=image_tag "default_photo.png", class: "user-dp center-block img-rounded" %>
+            <% else %>
+              <%=image_tag @user.image.url(:medium), class: "user-dp center-block img-rounded" %>
+            <% end %>
             <div class="row seo-icons center-block">
               <%# LinkedIn Icon %>
               <% unless @user.linkedin == nil %>
@@ -67,3 +71,5 @@
   <% end %>
 
 </div>
+
+
