--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,42 +1,22 @@
 
-<%= simple_form_for @user do |f| %>
-
-<div class="form-group">
-  <%= f.input :first_name %>
-</div>
-<div class="form-group">
-  <%= f.input :last_name %>
-</div>
-<div class="form-group">
-  <%= f.input :email %>
-</div>
-<div class="form-group">
-  <%= f.input :password %>
-</div>
-<div class="form-group">
-  <%= f.input :password_confirmation, label: 'confirm password', class: 'group-control' %>
-</div>
-<div class="form-group">
-  <%= f.input :summary %>
-</div>
-<div class="form-group">
-  <%= f.input :description %>
-</div>
-<div class="form-group">
-  <%= f.label 'Social Media' %>
-  <%= f.input :linkedin, as: :url %>
-  <%= f.input :github, as: :url %>
-  <%= f.input :twitter, as: :url %>
-</div>
-<div class="form-group">
-  <%= f.label "Available for recruiting?" %>
-  <%= f.check_box :is_available %>
-</div>
-<div class="form-group">
-  <%= f.input :image %>
-</div>
-<div class="form-group">
-  <%= f.input :attachment %>
-</div>
-<%= f.submit class: "btn btn-primary btn-sm" %>
-<% end %>
+  <div class="well well-sm">
+    <%= simple_form_for @user do |f| %>
+      <%= f.input :first_name%>
+      <%= f.input :last_name %>
+      <%= f.input :email%>
+      <%= f.input :password %>
+      <%= f.input :password_confirmation, label: 'confirm password' %>
+      <%= f.input :summary %>
+      <%= f.input :description %>
+      <%= f.label 'Social Media' %>
+      <%= f.input :linkedin, as: :url %>
+      <%= f.input :github, as: :url %>
+      <%= f.input :twitter, as: :url %>
+      <%= f.label "Available for recruiting?" %>
+      <%= f.check_box :is_available %>
+      <%= f.input :image %>
+      <%= f.input :attachment %>
+      <%= f.submit class: "btn btn-primary btn-sm" %>
+      <% end %>
+    </div>
+  </div>
