--- a/app/views/educations/_form.html.erb
+++ b/app/views/educations/_form.html.erb
@@ -17,7 +17,7 @@
     <%= f.input :field %>
   </div>
   <div class="form-group">
-    <%= f.submit "Add New Education", class: "btn btn-primary btn-sm" %>
+    <%= f.submit class: "btn btn-primary btn-sm" %>
   </div>
   <% end %>
 </div>
